--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -64,6 +64,29 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #b0b0b0;
   }
+}
+
+button{
+  width:100px;
+  height:100px;
+  color:black;
+  border: 2px solid white;
+  margin: 1px;
+  border-radius: 0px;
+  transition: background-color;
+}
+
+button:hover {
+  background-color: #c0c0c0;
+}
+
+button[disabled]{
+  border: 2px solid #999999;
+  background-color: #a0a0a0;
+}
+.board-row{
+  display:flex;
+  justify-content:center;
 }
